<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/total_victory_percentage_text"
        android:text="@string/total_victory_percentage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/total_victory_percentage_value"
        android:text="@string/total_victory_percentage_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_victory_percentage_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/total_active_decks_value"
        android:text="@string/total_active_decks_default_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_alignBaseline="@+id/total_active_decks_text"
        android:layout_alignBottom="@+id/total_active_decks_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/total_active_decks_text"
        android:text="@string/total_active_decks_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/total_games_played_value"
        android:layout_alignLeft="@+id/total_games_played_text"
        android:layout_alignStart="@+id/total_games_played_text"
        android:layout_marginBottom="40dp" />

    <TextView
        android:id="@+id/total_games_played_value"
        android:text="@string/total_games_played_default_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_alignBaseline="@+id/total_games_played_text"
        android:layout_alignBottom="@+id/total_games_played_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/total_games_played_text"
        android:text="@string/total_games_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/favorite_deck_text"
        android:layout_toEndOf="@+id/favorite_deck_text" />

    <TextView
        android:id="@+id/total_games_won_value"
        android:text="@string/total_games_won_default_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_below="@+id/total_games_played_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/total_games_won_text"
        android:text="@string/games_won_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/total_games_won_value"
        android:layout_alignBottom="@+id/total_games_won_value"
        android:layout_alignLeft="@+id/total_games_lost_text"
        android:layout_alignStart="@+id/total_games_lost_text" />

    <TextView
        android:id="@+id/total_games_lost_value"
        android:text="@string/total_games_lost_default_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_below="@+id/total_games_won_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/total_games_lost_text"
        android:text="@string/game_lost_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/total_games_lost_value"
        android:layout_alignBottom="@+id/total_games_lost_value"
        android:layout_alignLeft="@+id/total_games_played_text"
        android:layout_alignStart="@+id/total_games_played_text" />

    <ImageView
        android:id="@+id/most_played_deck_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignTop="@+id/favorite_deck_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/most_success_deck_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignTop="@+id/most_played_deck_icon"
        android:layout_alignLeft="@+id/most_success_deck_text"
        android:layout_alignStart="@+id/most_success_deck_text" />

    <TextView
        android:id="@+id/favorite_deck_value"
        android:text="@string/favorite_deck_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mainColor"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/most_played_deck_icon"
        android:layout_toEndOf="@+id/most_played_deck_icon"
        android:layout_marginBottom="13dp" />

    <TextView
        android:id="@+id/most_success_deck_value"
        android:text="@string/most_success_deck_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mainColor"
        android:layout_alignBaseline="@+id/favorite_deck_value"
        android:layout_alignBottom="@+id/favorite_deck_value"
        android:layout_toRightOf="@+id/most_success_deck_icon"
        android:layout_toEndOf="@+id/most_success_deck_icon" />

    <TextView
        android:id="@+id/favorite_deck_text"
        android:text="@string/favorite_deck_text"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/favorite_deck_value"
        android:layout_alignRight="@+id/favorite_deck_value"
        android:layout_alignEnd="@+id/favorite_deck_value" />

    <TextView
        android:id="@+id/most_success_deck_text"
        android:text="@string/most_success_deck_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/favorite_deck_text"
        android:layout_toRightOf="@+id/total_active_decks_text" />

</RelativeLayout>