<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:text="@string/default_deckName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectedDeckName_text"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:id="@+id/total_games_value"
        android:layout_alignBaseline="@+id/total_games_text"
        android:layout_alignBottom="@+id/total_games_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/total_games_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_games_text"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/total_games_value"
        android:layout_toEndOf="@+id/total_games_value"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp" />

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/game_won_value"
        android:layout_below="@+id/total_games_value"
        android:layout_toEndOf="@+id/total_games_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toRightOf="@+id/total_games_value" />

    <TextView
        android:text="@string/games_won_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/games_won_text"
        android:layout_alignBaseline="@+id/game_won_value"
        android:layout_alignBottom="@+id/game_won_value"
        android:layout_alignLeft="@+id/total_games_text"
        android:layout_alignStart="@+id/total_games_text" />

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_won_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:id="@+id/game_lost_value" />

    <TextView
        android:text="@string/game_lost_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_lost_text"
        android:layout_alignBaseline="@+id/game_lost_value"
        android:layout_alignBottom="@+id/game_lost_value"
        android:layout_alignLeft="@+id/games_won_text"
        android:layout_alignStart="@+id/games_won_text" />

    <TextView
        android:text="@string/default_victory_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/victory_percentage_value"
        android:textSize="40dp"
        android:layout_above="@+id/total_games_value"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/victory_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/victory_percentage_text"
        android:layout_above="@+id/victory_percentage_value"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/add_victory_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addVictory_button"
        android:layout_above="@+id/victory_percentage_text"
        android:layout_toRightOf="@+id/total_games_value"
        android:layout_toEndOf="@+id/total_games_value"
        android:layout_marginBottom="22dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/mage"
        android:id="@+id/deck_stat_icon"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/add_defeat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addDefeat_button"
        android:layout_alignBaseline="@+id/addVictory_button"
        android:layout_alignBottom="@+id/addVictory_button"
        android:layout_alignLeft="@+id/victory_percentage_value"
        android:layout_alignStart="@+id/victory_percentage_value"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp" />
</RelativeLayout>