<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:id="@+id/deckList"
        android:layout_alignBottom="@id/selectClass_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/deleteDeck_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/deleteDeck_button"
        android:layout_alignBottom="@+id/selectClass_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/newDeck_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/newDeck_button"
        android:layout_alignBaseline="@+id/deleteDeck_button"
        android:layout_alignBottom="@+id/deleteDeck_button"
        android:layout_toLeftOf="@+id/deleteDeck_button"
        android:layout_toStartOf="@+id/deleteDeck_button"
        android:layout_marginRight="26dp"
        android:layout_marginEnd="26dp" />

    <TextView
        android:text="@string/myDecks_text"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/selectClass_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>