<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="500dp"
        android:layout_height="500dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageView"
        android:layout_marginTop="357dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/welcome_text"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/welcomeText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/xpac_text"
        android:layout_toRightOf="@+id/xpac_text"
        android:layout_toEndOf="@+id/xpac_text"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:id="@+id/xpac_value"
        android:textColor="@color/mainColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/patch_text"
        android:layout_alignLeft="@+id/xpac_value"
        android:layout_alignStart="@+id/xpac_value"
        android:id="@+id/patch_value"
        android:textColor="@color/mainColor"/>

    <TextView
        android:text="@string/xpac_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="70dp"
        android:id="@+id/xpac_text"
        android:layout_below="@+id/welcomeText"
        android:layout_alignLeft="@+id/welcomeText"
        android:layout_alignStart="@+id/welcomeText" />

    <TextView
        android:text="@string/patch_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/patch_text"
        android:layout_below="@+id/xpac_text"
        android:layout_alignLeft="@+id/xpac_text"
        android:layout_alignStart="@+id/xpac_text" />

    <TextView
        android:text="@string/welcome_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeText2"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:textColor="@color/mainColor"/>


</RelativeLayout>